[tool.poetry]
name = "fdtd"
version = "0.1.5"
description = "1-D FDTD"
authors = ["Artem Mikhailov <artem.mihaylov.2017@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.6"
numpy = "^1.22.3"
pyqtgraph = "^0.12.4"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
data-science-types = "^0.2.23"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
